--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-asgiref==3.5.0
+asgiref==3.7.2
+backports.zoneinfo==0.2.1
+branca==0.6.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
-Django==3.2.12
+Django==4.2.3
+django-leaflet==0.29.0
 exceptiongroup==1.1.1
+geographiclib==2.0
+gpxpy==1.5.0
 gunicorn==20.1.0
 idna==3.4
 iniconfig==2.0.0
@@ -15,10 +20,11 @@ protobuf==3.20.3
 pytest==7.3.2
 python-dateutil==2.8.2
 pytz==2021.3
-requests==2.30.0
+requests==2.31.0
 six==1.16.0
-sqlparse==0.4.2
+sqlparse==0.4.4
 tenacity==8.2.2
 tomli==2.0.1
+typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.2
