Log nginx to files accessible from outside the container

--- a/nginx_server.conf
+++ b/nginx_server.conf
@@ -1,8 +1,11 @@
 server {
-    listen 8315;  # The port on which Nginx will listen
-    server_name localhost;  # Your domain or IP address
+    listen 8315;
+    server_name localhost;
 
-    root /cycle_logging/cycle_django/cycle_django/staticfiles;  # The directory where your static files are located
+    root /cycle_logging/cycle_django/cycle_django/staticfiles;
+
+    access_log /cycle_logging/cycle_django/nginx_access.log;
+    error_log /cycle_logging/cycle_django/nginx_error.log;
 
     location / {
         try_files $uri $uri/ =404;
