Access Gunicorn through nginx

--- a/nginx_server.conf
+++ b/nginx_server.conf
@@ -1,13 +1,22 @@
 server {
-    listen 8315;
+    listen 8314;
     server_name localhost;
-
-    root /cycle_logging/cycle_django/cycle_django/staticfiles;
 
     access_log /cycle_logging/cycle_django/nginx_access.log;
     error_log /cycle_logging/cycle_django/nginx_error.log;
 
     location / {
-        try_files $uri $uri/ =404;
+        proxy_pass http://127.0.0.1:8315;
+        # Not setting the headers as otherwise get CSP issues
+        #proxy_set_header Host $host;
+        #proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /static/ {
+        alias /cycle_logging/cycle_django/cycle_django/staticfiles/;
+    }
+
+    location = /favicon.ico {
+        alias /cycle_logging/favicon.ico;
     }
 }
