--- a/nginx_server.conf
+++ b/nginx_server.conf
@@ -2,8 +2,8 @@ server {
     listen 8314;
     server_name localhost;
 
-    access_log /cycle_logging/cycle_django/nginx_access.log;
-    error_log /cycle_logging/cycle_django/nginx_error.log;
+    access_log /cycle_logging/nginx_access.log;
+    error_log /cycle_logging/nginx_error.log;
 
     location / {
         proxy_pass http://127.0.0.1:8315;
@@ -13,10 +13,10 @@ server {
     }
 
     location /static/ {
-        alias /cycle_logging/cycle_django/cycle_django/staticfiles/;
+        alias /cycle_django_int/cycle_django/cycle_django/staticfiles/;
     }
 
     location = /favicon.ico {
-        alias /cycle_logging/favicon.ico;
+        alias /cycle_django_int/favicon.ico;
     }
 }
