--- a/nginx_server.conf
+++ b/nginx_server.conf
@@ -13,10 +13,10 @@ server {
     }
 
     location /static/ {
-        alias /cycle_logging/cycle_django/cycle_django/staticfiles/;
+        alias /cycle_django_int/cycle_django/cycle_django/staticfiles/;
     }
 
     location = /favicon.ico {
-        alias /cycle_logging/favicon.ico;
+        alias /cycle_django_int/favicon.ico;
     }
 }
