--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Mine
+.idea
+.attach_pid*
+backup_database
+migrations
+cycle_django_env/
+django_admin_password.txt
+django_secret_key.txt
+# Autocreated
 *~
 # Byte-compiled / optimized / DLL files
 __pycache__/
