--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,21 @@
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
-branca==0.6.0
-certifi==2023.5.7
-charset-normalizer==3.1.0
-Django==4.2.3
+certifi==2023.11.17
+charset-normalizer==3.3.2
+Django==5.0
 django-leaflet==0.29.0
-exceptiongroup==1.1.1
-geographiclib==2.0
-gpxpy==1.5.0
-gunicorn==20.1.0
-idna==3.4
-iniconfig==2.0.0
-numpy==1.22.3
-packaging==23.1
-pandas==2.0.2
-plotly==5.15.0
-pluggy==1.0.0
-protobuf==3.20.3
-psutil==5.9.5
-pytest==7.3.2
+gpxpy==1.6.2
+idna==3.6
+numpy==1.26.2
+packaging==23.2
+pandas==2.1.4
+plotly==5.18.0
+psutil==5.9.7
 python-dateutil==2.8.2
-pytz==2021.3
+pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
-tenacity==8.2.2
-tomli==2.0.1
-typing_extensions==4.7.1
+tenacity==8.2.3
+typing_extensions==4.9.0
 tzdata==2023.3
-urllib3==2.0.2
+urllib3==2.1.0
