--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.3.2
 Django==5.0
 django-leaflet==0.29.0
 gpxpy==1.6.2
+gunicorn==21.2.0
 idna==3.6
 numpy==1.26.2
 packaging==23.2
