--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ idna==3.6
 numpy==1.26.2
 packaging==23.2
 pandas==2.1.4
+pillow==10.3.0
 plotly==5.18.0
 psutil==5.9.7
 python-dateutil==2.8.2
+python-srtm==0.5.0
 pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
