Display SRTM tiles in the map

--- a/nginx_server.conf
+++ b/nginx_server.conf
@@ -16,6 +16,13 @@ server {
         alias /cycle_django_int/cycle_django/cycle_django/staticfiles/;
     }
 
+    location /Tiles/ {
+        alias /Tiles/;
+        # Enable caching of tiles
+        expires max;
+        add_header Cache-Control "public, no-transform";
+    }
+
     location = /favicon.ico {
         alias /cycle_django_int/favicon.ico;
     }
