--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 Django==5.0
 django-leaflet==0.29.0
+GDAL==3.4.1
 gpxpy==1.6.2
 gunicorn==21.2.0
 idna==3.6
